Fix button alignment and remove sketch

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,7 @@
   float: none;
   margin: 0 auto;
 }
+
+.send-button {
+  margin-left: -6px;
+}
