--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -40,7 +40,6 @@
 }
 
 .help-text {
-  padding-left: 15px;
   padding-top: 10px;
   font-weight: 600;
 }
@@ -78,4 +77,5 @@ select {
   margin-top: 8px;
   width: 40px;
 }
+
 /*login/signup css ends*/
